# filetrack

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: fill.sh  persistent_reading.rs  rewinding.rs  rotate.sh
src/: inode_aware.rs  lib.rs  multireader.rs  path_utils.rs  tracked_reader.rs
