[package]
name = "filetrack"
version = "0.1.0"
edition = "2021"
description = "a library for persistent reading of logs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/HectorHW/filetrack"
documentation = "https://docs.rs/filetrack"
authors = ["Hector Hanshew (@HectorHW)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.49"

[dev-dependencies]
anyhow = "1.0.75"
